[package]
name = "verify-thurs-night"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.22.1", features = ["alloc"] }  # Latest version with Engine decode feature
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.130"
remote-attestation-verifier = "0.1.0"  # Latest version of the crate

[profile.dev]
opt-level = 1